Fixed canvas giving wrong size and smudging

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,9 @@ body {
 }
 
 #canvas-wrapper {
+  border: 0;
+  margin: 0;
+  padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,4 +38,7 @@ body {
 #gamecanvas {
   width: 500px;
   height: 500px;
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
